* Thu Sep 13 2018 Nick Miller <nick.miller@onyxpoint.com> - 7.0.0-0
- Add support for Puppet 5 and OEL
- Convert docs to yard tags and add reference.md
- Added $package_ensure parameters to vnc::server and vnc::client
  - Changed the packages from 'latest' to 'installed'
  - Each will also respect `simp_options::package_ensure`

* Fri Jun 22 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.0-0
- Remove automatic setting of the XDMCP setting in GDM - BREAKING
  - It was determined that this should be something that the administrator
    should explicitly opt into by setting it in the GDM module settings via
    Hiera since it has security implications

* Tue May 08 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.3-0
- Ensure that the default VNC sessions set the IPv4 flag
- Ensure that the default VNC sessions set the banner to /dev/null

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.2-0
- Confine puppet version in metadata.json

* Wed Jan 02 2017 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.0.1-0
- Removed unecessary code and deps after major dep releases
- Locked versions of all build and test deps

* Wed Dec 14 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.0-0
- Use simp_options module for global catalysts
- Use strong typed parameters

* Mon Dec 05 2016 Nick Markowski <nmarkowski@keywcorp.com> - 5.0.1-0
- Replaced xwindows with gdm.

* Tue Nov 22 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 5.0.0-0
- Bump major version

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 4.1.2-0
- Minor cleanup

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.0-4
- migration to simplib and simpcat (lib/ only)

* Mon Apr 06 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-3
- Updated to ensure that a banner is not printed since this breaks many
  clients.

* Thu Feb 19 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-2
- Migrated to the new 'simp' environment.
