@@ -1,3 +1,6 @@
+* Thu Nov 01 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.0-0
+- Update the contribution guide URL in the README.md
+
 * Thu Sep 13 2018 Nick Miller <nick.miller@onyxpoint.com> - 7.0.0-0
 - Add support for Puppet 5 and OEL
 - Convert docs to yard tags and add reference.md
